Some refactoring (hoping it's final) + adding jade and a new page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 
     <h2>Managing your application</h2>
 
+    <h3>Lavoro: Engineering</h3>
+    <a href="/jobs/eng/detail">Vai la dettaglio</a>
+
     <h3>Web Console</h3>
     <p>You can use the OpenShift web console to enable additional capabilities via cartridges, add collaborator access
         authorizations, designate custom domain aliases, and manage domain memberships.</p>
+
+    <h3>MongoDB</h3>
+    <p>Manage your MongoDB through <a href="/rockmongo">RockMongo</a> </p>
 
     <h3>Command Line Tools</h3>
     <p>Installing the <a href="https://developers.openshift.com/en/managing-client-tools.html">OpenShift RHC client
