--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
 
     <h1>Welcome to your Node.js application on Heroku!</h1>
 
-    <h3>Lavoro: Engineering</h3>
+    <h3>Work: Engineering</h3>
     <a href="/jobs/eng/detail">Go to detail</a>
 
     <h3>Fun: Games</h3>
