Creazione pagina giudico deploy status

--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,12 @@
     <h1>Welcome to your Node.js application on Heroku!</h1>
 
     <h3>Work: Engineering</h3>
-    <a href="/jobs/eng/detail">Go to detail</a>
+    <p>
+        <a href="/jobs/eng/detail">Go to detail</a>
+    </p>
+    <p>
+        <a href="/jobs/eng/giudico/deploy-status">Go to Giudico Deploy Status</a>
+    </p>
 
     <h3>Fun: Games</h3>
     <a href="/games/byrons-adventures">Byron's Adventures</a>
