--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Welcome to SilibCloud</title>
 
-    <link rel="stylesheet" href="https://unpkg.com/sakura.css/css/sakura.css" type="text/css">
+    <link rel="stylesheet" href="assets/sakura.css" type="text/css">
 
     <link rel="stylesheet" type="text/css" href="assets/main.css">
 
