--- a/static/index.html
+++ b/static/index.html
@@ -9,17 +9,6 @@
 
     <link rel="stylesheet" type="text/css" href="assets/main.css">
 
-    <!--<link rel="stylesheet" href="https://unpkg.com/wingcss"/>-->
-
-    <!--<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">-->
-
-    <!--<link rel="stylesheet" href="assets/normalize.css">-->
-    <!--<link rel="stylesheet" href="assets/skeleton.css">-->
-
-    <!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic@6.4.0/picnic.min.css">-->
-
-    <!--<link rel="stylesheet" href="https://cdn.concisecss.com/concise.min.css">-->
-
 </head>
 <body>
 <section class='container'>
@@ -34,8 +23,19 @@
         <a href="/jobs/eng/giudico/deploy-status">Go to Giudico Deploy Status</a>
     </p>
 
-    <h3>Fun: Games</h3>
-    <a href="/games/byrons-adventures">Byron's Adventures</a>
+    <h3>Fun</h3>
+    <h4>Games</h4>
+    <p>
+        <a href="/fun/games/byrons-adventures">Byron's Adventures</a>
+    </p>
+
+    <h4>Graphic</h4>
+    <p>
+        <a href="/fun/graphic/assignment">Assignment</a>
+    </p>
+    <p>
+        <a href="/fun/graphic/project">Project</a>
+    </p>
 
     <h3>MongoDB</h3>
     <p>Manage your MongoDB through <a href="https://www.mlab.com/databases/heroku_8jl4bhc2">mLab</a> </p>
