--- a/static/BA_GameRelease/index.html
+++ b/static/BA_GameRelease/index.html
@@ -64,6 +64,8 @@
 	</head>
 
 	<body>
+	<a style="border: .1rem rgba(44, 0, 159, 0.79) solid;border-radius: .5rem;padding: .2rem;font-size: large;position: fixed;right: .3rem; top: .3rem;" href="/">HOME</a>
+
 	<h1  class="credits" id="title" > Byron's Adventures Game </h1>
 	<!--<div id="description" style="text-align: center">Use arrows to go left, right and jump (you can double jump).
 		<br>Press A to perform a sword attack.
