--- a/static/index.html
+++ b/static/index.html
@@ -13,7 +13,7 @@
 <body>
 <section class='container'>
 
-    <h1>Welcome to your Node.js application on Heroku!</h1>
+    <h1>Welcome to my Node.js application on Heroku!</h1>
 
     <h3>Work: Engineering</h3>
     <p>
