Added hangman online

--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,9 @@
     <p>
         <a href="/fun/games/byrons-adventures">Byron's Adventures</a>
     </p>
+    <p>
+        <a href="/fun/games/hangman-with-friends">Hangman with friends</a>
+    </p>
 
     <h4>Graphic</h4>
     <p>
