Hangman game externalized

--- a/static/index.html
+++ b/static/index.html
@@ -29,7 +29,7 @@
         <a href="/fun/games/byrons-adventures">Byron's Adventures</a>
     </p>
     <p>
-        <a href="/fun/games/hangman-with-friends">Hangman with friends</a>
+        <a href="https://silibcloud-hangman.netlify.app">Hangman with friends</a>
     </p>
 
     <h4>Graphic</h4>
